<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ccc"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_popup_class"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/_2i666b_thermo_wesh"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_popup_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/date_mardi_17_septembre_2013"
        android:textColor="#000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_popup_hour"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/dur_e_1h15_11h00_12h15"
        android:textColor="#000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_popup_groups"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/groupe_3_mic_d"
        android:textColor="#000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_popup_professor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/enseignant_m_azerty"
        android:textColor="#000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_popup_room"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/salle_amphi_107_60"
        android:textColor="#000"
        android:textSize="14sp" />

    <ImageView
            android:id="@+id/iv_popup_ee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:visibility="gone" android:contentDescription="@string/img_description"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/tap_to_close"
            android:textColor="#a000" android:gravity="end"/>

</LinearLayout>