<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/item_widget_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#B6B6B6"
    android:orientation="vertical"
    android:padding="2dp">

    <TextView
            android:id="@+id/item_widget_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/placeholder_UFtitle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" android:layout_alignParentStart="true"/>

    <TextView
            android:id="@+id/item_widget_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/item_widget_summary"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/placeholder_time"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000"
            android:textSize="12sp" android:layout_alignParentEnd="true"/>

    <TextView
            android:id="@+id/item_widget_gnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:typeface="monospace"
            android:textStyle="bold"
            android:text="@string/placeholder_chiffre"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="#AA444444"
            android:textColor="#AAffffff"
            android:textSize="12sp" android:layout_alignParentEnd="true"/>

</RelativeLayout>
